--- a/css/shaarli.css
+++ b/css/shaarli.css
@@ -3876,7 +3876,7 @@ https://github.com/pure-css/pure/blob/master/LICENSE.md
 
 :root {
   --main-color: #1b926c;
-  --background-color: #d0d0d0;
+  --background-color: #fff;
   --dark-main-color: #186446; }
 
 body {
@@ -3908,15 +3908,33 @@ pre {
 
 @font-face {
   font-family: 'Roboto';
-  font-weight: 400;
   font-style: normal;
-  src: local("Roboto"), local("Roboto-Regular"), url("../fonts/Roboto-Regular.woff2") format("woff2"), url("../fonts/Roboto-Regular.woff") format("woff"); }
+  font-weight: 400;
+  src: local("Roboto"), local("Roboto-Regular"), url("../fonts/roboto-v20-latin-regular.woff2") format("woff2"), url("../fonts/roboto-v20-latin-regular.woff") format("woff"); }
 
 @font-face {
   font-family: 'Roboto';
-  font-weight: 700;
   font-style: normal;
-  src: local("Roboto"), local("Roboto-Bold"), url("../fonts/Roboto-Bold.woff2") format("woff2"), url("../fonts/Roboto-Bold.woff") format("woff"); }
+  font-weight: 500;
+  src: local("Roboto Medium"), local("Roboto-Medium"), url("../fonts/roboto-v20-latin-500.woff2") format("woff2"), url("../fonts/roboto-v20-latin-500.woff") format("woff"); }
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 500;
+  src: local("Roboto Medium Italic"), local("Roboto-MediumItalic"), url("../fonts/roboto-v20-latin-500italic.woff2") format("woff2"), url("../fonts/roboto-v20-latin-500italic.woff") format("woff"); }
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 400;
+  src: local("Roboto Italic"), local("Roboto-Italic"), url("../fonts/roboto-v20-latin-italic.woff2") format("woff2"), url("../fonts/roboto-v20-latin-italic.woff") format("woff"); }
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  src: local("Roboto Bold"), local("Roboto-Bold"), url("../fonts/roboto-v20-latin-700.woff2") format("woff2"), url("../fonts/roboto-v20-latin-700.woff") format("woff"); }
 
 body,
 .pure-g [class*='pure-u'] {
@@ -3970,7 +3988,8 @@ body,
 
 #shaarli-menu {
   background: var(--main-color);
-  width: 100%; }
+  width: 100%;
+  margin-bottom: 20px; }
 
 .shaarli-menu {
   margin: auto;
@@ -4226,11 +4245,6 @@ body,
   position: relative;
   color: #f5f5f5; }
 
-.linksperpage a, .linksperpage input[type="text"] {
-  display: inline-block;
-  width: 20px;
-  text-align: center; }
-
 .linksperpage {
   display: inline-block; }
   .linksperpage a {
@@ -4253,8 +4267,7 @@ body,
 .linklist-item {
   position: relative;
   margin: 0 0 10px;
-  box-shadow: 1px 1px 3px #797979;
-  background: #f5f5f5; }
+  box-shadow: 1px 1px 3px #797979; }
   .linklist-item.private::before {
     display: block;
     position: absolute;
@@ -4285,28 +4298,25 @@ body,
 
 .linklist-item-title {
   position: relative;
-  margin: 0;
-  background: #f5f5f5;
+  margin: 0 0 20px 0;
   word-wrap: break-word; }
   .linklist-item-title h2 {
     margin: 0;
-    padding: 3px 10px 0;
-    line-height: 30px;
-    word-wrap: break-word; }
+    word-wrap: break-word;
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 40px; }
     .linklist-item-title h2 a {
       vertical-align: middle;
       text-decoration: none;
-      color: #252525;
-      font-size: .7em; }
-      .linklist-item-title h2 a:visited .linklist-link {
-        color: var(--dark-main-color); }
+      color: var(--main-color); }
+      .linklist-item-title h2 a i {
+        font-size: 16px;
+        position: relative;
+        top: -2px;
+        left: 16px; }
       .linklist-item-title h2 a:hover {
-        color: #252525; }
-  .linklist-item-title .linklist-link {
-    color: var(--main-color);
-    font-size: 1.1em; }
-    .linklist-item-title .linklist-link:hover {
-      color: #252525; }
+        color: var(--main-dark-color); }
   .linklist-item-title .label {
     font-family: Arial, sans-serif;
     font-size: .65em; }
@@ -4349,7 +4359,6 @@ body,
 
 .linklist-item-description {
   position: relative;
-  padding: 0 10px;
   line-height: 1.3em;
   color: #252525;
   word-wrap: break-word; }
@@ -4357,9 +4366,7 @@ body,
     text-decoration: none;
     color: var(--main-color); }
     .linklist-item-description a:hover {
-      color: #252525; }
-    .linklist-item-description a:visited {
-      color: var(--dark-main-color); }
+      color: var(--main-color); }
 
 .linklist-item-thumbnail {
   position: relative;
@@ -4784,9 +4791,8 @@ form[name='linkform'].page-form {
   text-decoration: none;
   color: var(--main-color); }
   .daily-entry-description a:hover {
-    text-shadow: 1px 1px #ddd; }
-  .daily-entry-description a:visited {
-    color: var(--dark-main-color); }
+    text-shadow: 1px 1px #ddd;
+    color: var(--main-color); }
 
 .pure-button {
   -moz-user-select: auto; }
@@ -4801,16 +4807,33 @@ form[name='linkform'].page-form {
     color: #fff;
     font-weight: bold; }
 
-.markdown p {
+.linklist-item-description .markdown h1 {
+  font-size: 24px;
+  font-weight: 500; }
+
+.linklist-item-description .markdown h2 {
+  font-size: 20px;
+  font-weight: 500;
+  font-style: italic; }
+
+.linklist-item-description .markdown h3 {
+  font-size: 18px;
+  font-weight: 700; }
+
+.linklist-item-description .markdown h4, .linklist-item-description .markdown h5, .linklist-item-description .markdown h6 {
+  font-size: 18px;
+  font-weight: 500; }
+
+.linklist-item-description .markdown p {
   margin: 0 !important; }
 
-.markdown p + p {
+.linklist-item-description .markdown p + p {
   margin: .5em 0 0 !important; }
 
-.markdown *:first-child {
+.linklist-item-description .markdown *:first-child {
   margin-top: 0 !important; }
 
-.markdown *:last-child {
+.linklist-item-description .markdown *:last-child {
   margin-bottom: 5px !important; }
 
 .pure-button-success,
