--- a/css/shaarli.css
+++ b/css/shaarli.css
@@ -3879,33 +3879,6 @@ https://github.com/pure-css/pure/blob/master/LICENSE.md
   --background-color: #fff;
   --dark-main-color: #186446; }
 
-body {
-  background: var(--background-color); }
-
-.strong {
-  font-weight: bold; }
-
-.clear {
-  clear: both; }
-
-.center {
-  margin: auto;
-  text-align: center; }
-
-.label {
-  display: inline-block;
-  border-radius: .25rem;
-  padding: .25em .4em;
-  vertical-align: baseline;
-  text-align: center;
-  line-height: 1;
-  white-space: nowrap;
-  font-size: 75%;
-  font-weight: 700; }
-
-pre {
-  max-width: 100%; }
-
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
@@ -3936,9 +3909,46 @@ pre {
   font-weight: 700;
   src: local("Roboto Bold"), local("Roboto-Bold"), url("../fonts/roboto-v20-latin-700.woff2") format("woff2"), url("../fonts/roboto-v20-latin-700.woff") format("woff"); }
 
+body {
+  background: var(--background-color); }
+
 body,
 .pure-g [class*='pure-u'] {
-  font-family: Roboto, Arial, sans-serif; }
+  font: 16px/1.4 Roboto, arial, sans-serif;
+  color: #252525; }
+
+.strong {
+  font-weight: bold; }
+
+.clear {
+  clear: both; }
+
+.center {
+  margin: auto;
+  text-align: center; }
+
+.label {
+  display: inline-block;
+  position: relative;
+  top: -1px;
+  border-radius: .25rem;
+  margin-right: 4px;
+  padding: 4px 6px;
+  vertical-align: baseline;
+  text-align: center;
+  line-height: 1;
+  white-space: nowrap;
+  font-size: 12.7px;
+  font-weight: 500;
+  background: #0b5ea6;
+  color: #fff; }
+
+.label-tag a {
+  text-decoration: none;
+  color: #fff; }
+
+pre {
+  max-width: 100%; }
 
 .pure-u-0 {
   display: none !important; }
@@ -4061,7 +4071,7 @@ body,
   box-shadow: 0 1px 0 rgba(255, 255, 255, 0.078), 0 1px 1px rgba(0, 0, 0, 0.298) inset;
   background: #f5f5f5;
   padding: 0 12px;
-  width: 200px;
+  width: 240px;
   height: 30px;
   color: #252525;
   margin-right: 16px; }
@@ -4095,10 +4105,6 @@ body,
 .search-linklist button:hover,
 .search-tagcloud button:hover {
   color: var(--background-color); }
-
-.header-search,
-.search-linklist {
-  padding: 6px 0; }
 
 @media screen and (max-width: 64em) {
   .header-search,
@@ -4208,9 +4214,9 @@ body,
     width: 70%; } }
 
 .linklist-filters {
-  margin: 5px 0;
   display: inline-block;
   position: absolute;
+  top: -4px;
   right: 0; }
   .linklist-filters a {
     display: inline-block;
@@ -4229,7 +4235,9 @@ body,
 
 .linklist-pages {
   display: inline-block;
-  line-height: 40px; }
+  position: relative;
+  top: -6px;
+  left: 36px; }
   .linklist-pages a {
     color: #f5f5f5;
     text-decoration: none;
@@ -4253,15 +4261,16 @@ body,
     text-decoration: none;
     color: #252525; }
   .linksperpage label {
-    margin-right: 8px; }
+    margin-right: 16px; }
   .linksperpage input[type="text"] {
     margin: 0 6px 0 16px;
     border: medium none currentColor;
     background: #f5f5f5;
-    padding: 0;
+    padding: 0 8px 0 0;
     height: 27px;
     color: #252525;
-    width: 48px;
+    text-align: right;
+    width: 40px;
     border-radius: 4px; }
 
 .linklist-item {
@@ -4296,16 +4305,20 @@ body,
   width: 100%;
   text-align: center; }
 
+.linklist-item-tags {
+  margin: 1em 0; }
+
 .linklist-item-title {
   position: relative;
-  margin: 0 0 20px 0;
+  margin: 0 0 8px 0;
   word-wrap: break-word; }
   .linklist-item-title h2 {
     margin: 0;
     word-wrap: break-word;
-    font-size: 28px;
-    font-weight: 500;
-    line-height: 40px; }
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 29px;
+    max-width: 80%; }
     .linklist-item-title h2 a {
       vertical-align: middle;
       text-decoration: none;
@@ -4316,9 +4329,8 @@ body,
         top: -2px;
         left: 16px; }
       .linklist-item-title h2 a:hover {
-        color: var(--main-dark-color); }
+        color: var(--dark-main-color); }
   .linklist-item-title .label {
-    font-family: Arial, sans-serif;
     font-size: .65em; }
   .linklist-item-title .label-private {
     border: solid 1px #f89406;
@@ -4359,14 +4371,49 @@ body,
 
 .linklist-item-description {
   position: relative;
-  line-height: 1.3em;
   color: #252525;
-  word-wrap: break-word; }
+  word-wrap: break-word;
+  max-width: 800px; }
   .linklist-item-description a {
     text-decoration: none;
     color: var(--main-color); }
     .linklist-item-description a:hover {
       color: var(--main-color); }
+
+.linklist-item-description .markdown {
+  /*
+	p {
+		margin: 0 !important;
+	}
+*/
+  /*
+	* {
+		&:first-child {
+			margin-top: 0 !important;
+		}
+		&:last-child {
+			margin-bottom: 5px !important;
+		}
+	}
+*/ }
+  .linklist-item-description .markdown h1 {
+    font-size: 24px;
+    font-weight: 500; }
+  .linklist-item-description .markdown h2 {
+    font-size: 20px;
+    font-weight: 500;
+    font-style: italic; }
+  .linklist-item-description .markdown h3 {
+    font-size: 18px;
+    font-weight: 700;
+    margin: 1em 0 0; }
+  .linklist-item-description .markdown h4, .linklist-item-description .markdown h5, .linklist-item-description .markdown h6 {
+    font-size: 18px;
+    font-weight: 500; }
+  .linklist-item-description .markdown p + p, .linklist-item-description .markdown p + ul, .linklist-item-description .markdown p + ol {
+    margin: .5em 0 0 !important; }
+  .linklist-item-description .markdown ol li, .linklist-item-description .markdown ul li {
+    margin: .5em 0 0; }
 
 .linklist-item-thumbnail {
   position: relative;
@@ -4385,10 +4432,6 @@ body,
     color: #252525; }
     .linklist-item-infos a:hover {
       color: #000; }
-  .linklist-item-infos .linklist-item-tags {
-    font-size: .8em; }
-  .linklist-item-infos .label-tag {
-    font-size: 1em; }
   .linklist-item-infos .mobile-buttons {
     text-align: right; }
   .linklist-item-infos .linklist-plugin-icon {
@@ -4405,13 +4448,21 @@ body,
   height: 13px; }
 
 .linklist-item-infos-url {
-  height: 23px;
   overflow: hidden;
-  text-align: right;
   text-overflow: ellipsis;
-  line-height: 23px;
   white-space: nowrap;
-  font-size: .8em; }
+  font-size: 12.7px;
+  margin-bottom: 4px; }
+  .linklist-item-infos-url a {
+    color: #797979;
+    text-decoration: none; }
+    .linklist-item-infos-url a:hover {
+      color: #0b5ea6; }
+
+.linkdate {
+  font-size: 12.7px;
+  font-style: italic;
+  color: #797979; }
 
 .linklist-item-infos-controls-group {
   display: inline-block;
@@ -4629,6 +4680,9 @@ form[name='linkform'].page-form {
   text-decoration: none;
   color: #fff; }
 
+.search-result .label:first-child {
+  margin-left: 4px; }
+
 .search-result .label-tag {
   border-color: #fff; }
   .search-result .label-tag .remove {
@@ -4719,8 +4773,7 @@ form[name='linkform'].page-form {
   .picwall-pictureframe a {
     text-decoration: none; }
   .picwall-pictureframe span.info {
-    display: none;
-    font-family: Arial, sans-serif; }
+    display: none; }
   .picwall-pictureframe:hover span.info {
     display: block;
     position: absolute;
@@ -4806,35 +4859,6 @@ form[name='linkform'].page-form {
     text-decoration: none;
     color: #fff;
     font-weight: bold; }
-
-.linklist-item-description .markdown h1 {
-  font-size: 24px;
-  font-weight: 500; }
-
-.linklist-item-description .markdown h2 {
-  font-size: 20px;
-  font-weight: 500;
-  font-style: italic; }
-
-.linklist-item-description .markdown h3 {
-  font-size: 18px;
-  font-weight: 700; }
-
-.linklist-item-description .markdown h4, .linklist-item-description .markdown h5, .linklist-item-description .markdown h6 {
-  font-size: 18px;
-  font-weight: 500; }
-
-.linklist-item-description .markdown p {
-  margin: 0 !important; }
-
-.linklist-item-description .markdown p + p {
-  margin: .5em 0 0 !important; }
-
-.linklist-item-description .markdown *:first-child {
-  margin-top: 0 !important; }
-
-.linklist-item-description .markdown *:last-child {
-  margin-bottom: 5px !important; }
 
 .pure-button-success,
 .pure-button-error,
